--- a/src/resource/views/admin/updating.hbs
+++ b/src/resource/views/admin/updating.hbs
@@ -1,5 +1,5 @@
 <div class="handle-products">
-  <form method="POST" action="/admin/updated/{{product._id}}?_method=PUT">
+  <form method="POST" action="/admin/updated/{{product._id}}?_method=PUT" enctype="multipart/form-data">
     <div class="form-title">
       <p>Sửa sản phẩm</p>
     </div>
