--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -66,7 +66,7 @@
 </div>
 
 <script>
-var dropdownTitle = document.querySelector('div[class="dropdown-title"]')
+{{!-- var dropdownTitle = document.querySelector('div[class="dropdown-title"]')
 var dropdownContent = document.querySelector('div[class="dropdown-content"]')
 var dropdownContentDropRights = document.querySelectorAll('div[class="dropdown-content-dropright"]')
 var dropdownContentDropRightContents = document.querySelectorAll('div[class="dropdown-content-dropright-content"]')
@@ -95,6 +95,6 @@ for (let i = 0; i <= 1; ++i) {
     dropdownContentDropRightContents[i].style.display = (dropdownContentDropRightContents[i].style.display === 'none') ? 'block' : 'none'
     dropdownContentDropRightContents[1-i].style.display = 'none'
   }
-}
+} --}}
 
 </script>
