--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -64,7 +64,7 @@ function isRequiredString(selector) {
   return {
     selector: selector,
     test: function (value) {
-      return value.trim() ? undefined : 'Quên chưa nhập kìa =((('
+      return value.trim() ? undefined : 'Quên Chưa Nhập Kìa =((('
     }
   }
 }
@@ -75,7 +75,7 @@ function isEmail(selector) {
     selector: selector,
     test: function (value) {
       var regex = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/
-      return regex.test(value) ? undefined : 'Nhập cho đúng vào =((('
+      return regex.test(value) ? undefined : 'Nhập Đúng Email Vô =((('
     }
   }
 }
