--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -114,6 +114,7 @@
         <option value="no">Bình thường</option>
         <option value="flash-sale">Đang Flash Sale</option>
         <option value="hot">Đang hot</option>
+        <option value="out-of-order">Hết Hàng</option>
       </select>
     </div>
 
