--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -56,7 +56,6 @@
   i { color: #D1A6A6 }
 }
 
-
 .all-products {
   padding-right: 17px;
   scroll-behavior: smooth;
@@ -67,6 +66,11 @@
   padding: 15px;
   display: grid;
   grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  overflow-x: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
   
   img { max-width: 100%; aspect-ratio: 1 / 1 };
 
@@ -74,6 +78,8 @@
     background-color: white; 
     max-width: 220px;
     padding: 5px 12px 5px 12px;
+    scroll-snap-align: none start;
+    a, p { text-decoration: none; color: black}
   };
   
   .product:hover {
@@ -137,5 +143,11 @@
     background-color: #D1A6A6;
     color: white;
     border: 1px solid white ;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .all-products {
+    grid-template-columns: repeat(2, minmax(min(11.25rem, 100%), 1fr));
   }
 }
