--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
+  <link rel="icon" type="image/svg+xml" href="../../img/4.jpg" />
   <link rel="stylesheet" href="/css/userAdvertise.css">
   <link rel="stylesheet" href="/css/userAllProducts.css">
   <link rel="stylesheet" href="/css/userFooter.css">
