--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -7,49 +7,49 @@
   
     <div class="dropdown-content">
       <div class="dropdown-content-dropright">
-        <p>
+        <a href="">
           Skincare
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-        </p>
+        </a>
         <div class="dropdown-content-dropright-content">
           <div class="column">
             <div class="column-1">    
-              <a href="/all-products/xit-khoang">Xịt khoáng</a>
-              <a href="/all-products/mat-na">Mặt nạ</a>
-              <a href="/all-products/serum">Serum</a>
-              <a href="/all-products/bha">BHA</a>
-              <a href="/all-products/tay-da-chet">Tẩy da chết</a>
-              <a href="/all-products/duong-da">Dưỡng da</a>
+              <a href="/all-products/skincare/xit-khoang">Xịt khoáng</a>
+              <a href="/all-products/skincare/mat-na">Mặt nạ</a>
+              <a href="/all-products/skincare/serum">Serum</a>
+              <a href="/all-products/skincare/bha">BHA</a>
+              <a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a>
+              <a href="/all-products/skincare/duong-da">Dưỡng da</a>
             </div>
 
             <div class="column-2">    
-              <a href="/all-products/toner">Toner</a>
-              <a href="/all-products/nuoc-tay-trang">Nước tẩy trang</a>
-              <a href="/all-products/cham-mun">Chấm mụn</a>
-              <a href="/all-products/kem-duong-am">Kem dưỡng ẩm</a>
-              <a href="/all-products/sua-rua-mat">Sữa rửa mặt</a>
+              <a href="/all-products/skincare/toner">Toner</a>
+              <a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a>
+              <a href="/all-products/skincare/cham-mun">Chấm mụn</a>
+              <a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a>
+              <a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a>
             </div>
           </div>
         </div>  
       </div>
 
       <div class="dropdown-content-dropright">
-        <p>
+        <a href="">
           Makeup
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-        </p>
+        </a>
         <div class="dropdown-content-dropright-content">
           <div class="column">
             <div class="column-1">    
-              <a href="/all-products/phan-ma">Phấn má</a>
-              <a href="/all-products/mascara">Mascara</a>
-              <a href="/all-products/ke-mat">Kẻ mắt</a>
+              <a href="/all-products/makeup/phan-ma">Phấn má</a>
+              <a href="/all-products/makeup/mascara">Mascara</a>
+              <a href="/all-products/makeup/ke-mat">Kẻ mắt</a>
             </div>
 
             <div class="column-2">    
-              <a href="/all-products/kem-chong-nang">Kem chống nắng</a>
-              <a href="/all-products/che-khuyet-diem">Che khuyết điểm</a>
-              <a href="/all-products/son">Son</a>
+              <a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a>
+              <a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a>
+              <a href="/all-products/makeup/son">Son</a>
             </div>
           </div>
         </div>  
@@ -66,35 +66,5 @@
 </div>
 
 <script>
-{{!-- var dropdownTitle = document.querySelector('div[class="dropdown-title"]')
-var dropdownContent = document.querySelector('div[class="dropdown-content"]')
-var dropdownContentDropRights = document.querySelectorAll('div[class="dropdown-content-dropright"]')
-var dropdownContentDropRightContents = document.querySelectorAll('div[class="dropdown-content-dropright-content"]')
-
-dropdownTitle.onclick = function() {
-  dropdownContent.style.display = (dropdownContent.style.display === 'none') ? 'block' : 'none'
-  dropdownContentDropRightContents.forEach(function(dropdownContentDropRightContent) {
-    dropdownContentDropRightContent.style.display = 'none'
-  })
-}
-
-document.addEventListener('click', function(event) {
-  if (!event.target.matches('.dropdown-title') &&
-      !event.target.closest('.dropdown-title') &&
-      !event.target.closest('.dropdown-content-dropright')
-    ) { // Check if clicked element is not a dropdown-title
-    dropdownContent.style.display = 'none'
-    dropdownContentDropRightContents.forEach(function(dropdownContentDropRightContent) {
-      dropdownContentDropRightContent.style.display = 'none'
-    })
-  }
-});
-
-for (let i = 0; i <= 1; ++i) {
-  dropdownContentDropRights[i].onclick = function() {
-    dropdownContentDropRightContents[i].style.display = (dropdownContentDropRightContents[i].style.display === 'none') ? 'block' : 'none'
-    dropdownContentDropRightContents[1-i].style.display = 'none'
-  }
-} --}}
 
 </script>
