--- a/src/resource/views/users/allProductsHot.hbs
+++ b/src/resource/views/users/allProductsHot.hbs
@@ -13,7 +13,7 @@
     {{#each product}}
       <div class="product">
         <a href="/product/{{this.slug}}">
-          <img src="../uploads/{{this.avatar}}" alt="">
+          <img src="../../uploads/{{this.avatar}}" alt="">
           <p id="product-price">{{this.price}}</p>
           <p id="product-details">{{this.name}}</p>
         </a>
