--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -1,4 +1,4 @@
-<div class="handle-products">
+<div class="admin-create-product-container">
   <form id="form-1" method="post" action="/admin/created" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thêm sản phẩm mới</p>
