--- a/src/resource/views/admin/orders.hbs
+++ b/src/resource/views/admin/orders.hbs
@@ -1,4 +1,4 @@
-<div class="update-board" name="container">  
+<div class="admin-all-orders-container">  
   <div class="board-sidebar">
     <p>Tổng Đơn Hàng</p>
   </div>
