--- a/src/resource/views/admin/profileUpdate.hbs
+++ b/src/resource/views/admin/profileUpdate.hbs
@@ -1,4 +1,4 @@
-<div class="handle-products">
+<div class="admin-update-profile-container">
   <form method="POST" action="/admin/updated/{{product._id}}?_method=PUT">
     <div class="form-title">
       <p>Cập nhật thông tin cá nhân</p>
