--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -1,4 +1,4 @@
-<div class="update-board">
+<div class="admin-trash-products-container">
   <div class="board-sidebar">
       <p>Sản phẩm đã xoá</p>
   </div>
