--- a/src/resource/views/admin/update.hbs
+++ b/src/resource/views/admin/update.hbs
@@ -1,4 +1,4 @@
-<div class="update-board" name="container">  
+<div class="admin-all-products-container">  
   <div class="board-sidebar">
     <p>Tổng sản phẩm</p>
   </div>
