--- a/src/resource/views/admin/updating.hbs
+++ b/src/resource/views/admin/updating.hbs
@@ -1,4 +1,4 @@
-<div class="handle-products">
+<div class="admin-update-product-container">
   <form method="POST" action="/admin/updated/{{product._id}}?_method=PUT" enctype="multipart/form-data">
     <div class="form-title">
       <p>Sửa sản phẩm</p>
