--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
   <link rel="stylesheet" href="/css/adminAllOrders.css">
-  <link rel="stylesheet" href="/css/adminCreate.css">
-  <link rel="stylesheet" href="/css/adminUpdate.css">
-  <link rel="stylesheet" href="/css/adminSidebar.css">
+  <link rel="stylesheet" href="/css/adminAllProducts.css">
+  <link rel="stylesheet" href="/css/adminCreateProduct.css">
   <link rel="stylesheet" href="/css/adminHome.css">
+  <link rel="stylesheet" href="/css/adminSidebar.css">
+  <link rel="stylesheet" href="/css/adminTrashProducts.css">
+  <link rel="stylesheet" href="/css/adminUpdateProduct.css">
+  <link rel="stylesheet" href="/css/adminUpdateProfile.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
