--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="sign-in-container">
   <form id="form-3" method="post" action="/authentication/checking-account">
     <div class="form-title">
       <p>Đăng nhập</p>
