--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="sign-up-container">
   <form id="form-2" method="post" action="/authentication/creating-account">
     <div class="form-title">
       <p>Đăng ký</p>
