--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -1,4 +1,4 @@
-<div class="navigation-bar">
+<div class="navigation-container">
   <div class="dropdown">
     <div class="dropdown-title">
       <i class="fi fi-br-menu-burger"></i>
