--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -1,4 +1,4 @@
-<div class="product-details">
+<div class="product-details-container">
   <div class="table">
     <div class="image-box">
       <div class="thumbnails">
