--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -7,7 +7,7 @@
   
     <div class="dropdown-content">
       <div class="dropdown-content-dropright">
-        <a href="">
+        <a href="/all-products/skincare">
           Skincare
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </a>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="dropdown-content-dropright">
-        <a href="">
+        <a href="/all-products/makeup">
           Makeup
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </a>
@@ -61,7 +61,7 @@
     <a href="/introduce">GIỚI THIỆU</a>
   </div>
   <div class="title">
-    <a href="/new-arrival">HÀNG MỚI VỀ</a>
+    <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
   </div>
 </div>
 
