--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -58,7 +58,7 @@
   <div class="board-title" style="display: flex; align-items: center; color: red; justify-content: space-between;">
     <div class="title">
       <i class="fi fi-sr-flame"></i>
-      <p class="main-title"><b>SẢN PHẨM CHÍNH</b></p>
+      <p class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></p>
     </div>
     <div class="see-more-icon">
       <a href="/all-products" class="see-more-icon-title" style="text-decoration: none;">Xem Tất Cả</a>
