--- a/src/public/css/userFooterNavigate.css
+++ b/src/public/css/userFooterNavigate.css
@@ -3,7 +3,7 @@ footerNav {
   z-index: 2;
 
   .drop-up-menu {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
