--- a/src/resource/views/partials/userFooterNavigate.hbs
+++ b/src/resource/views/partials/userFooterNavigate.hbs
@@ -13,34 +13,34 @@
   <div class="drop-up-right-content">
     <div class="column">
       <div class="column-1">    
-        <a href="/all-products/xit-khoang">Xịt khoáng</a>
-        <a href="/all-products/mat-na">Mặt nạ</a>
-        <a href="/all-products/serum">Serum</a>
-        <a href="/all-products/bha">BHA</a>
-        <a href="/all-products/tay-da-chet">Tẩy da chết</a>
-        <a href="/all-products/duong-da">Dưỡng da</a>
+        <a href="/all-products/skincare/xit-khoang">Xịt khoáng</a>
+        <a href="/all-products/skincare/mat-na">Mặt nạ</a>
+        <a href="/all-products/skincare/serum">Serum</a>
+        <a href="/all-products/skincare/bha">BHA</a>
+        <a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a>
+        <a href="/all-products/skincare/duong-da">Dưỡng da</a>
       </div>
 
       <div class="column-2">    
-        <a href="/all-products/toner">Toner</a>
-        <a href="/all-products/nuoc-tay-trang">Nước tẩy trang</a>
-        <a href="/all-products/cham-mun">Chấm mụn</a>
-        <a href="/all-products/kem-duong-am">Kem dưỡng ẩm</a>
-        <a href="/all-products/sua-rua-mat">Sữa rửa mặt</a>
+        <a href="/all-products/skincare/toner">Toner</a>
+        <a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a>
+        <a href="/all-products/skincare/cham-mun">Chấm mụn</a>
+        <a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a>
+        <a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a>
       </div>
     </div>
 
     <div class="column">
       <div class="column-1">    
-        <a href="/all-products/phan-ma">Phấn má</a>
-        <a href="/all-products/mascara">Mascara</a>
-        <a href="/all-products/ke-mat">Kẻ mắt</a>
+        <a href="/all-products/makeup/phan-ma">Phấn má</a>
+        <a href="/all-products/makeup/mascara">Mascara</a>
+        <a href="/all-products/makeup/ke-mat">Kẻ mắt</a>
       </div>
 
       <div class="column-2">    
-        <a href="/all-products/kem-chong-nang">Kem chống nắng</a>
-        <a href="/all-products/che-khuyet-diem">Che khuyết điểm</a>
-        <a href="/all-products/son">Son</a>
+        <a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a>
+        <a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a>
+        <a href="/all-products/makeup/son">Son</a>
       </div>
     </div>
   </div>  
