--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -4,6 +4,29 @@
     <div class="main-title" style="text-transform:uppercase"><b>Toàn bộ sản phẩm nè</b></div>
   </div>
 
+  <div class="all-category-skincare">
+    <a href="/all-products/skincare/xit-khoang">Xịt khoáng</a>
+    <a href="/all-products/skincare/mat-na">Mặt nạ</a>
+    <a href="/all-products/skincare/serum">Serum</a>
+    <a href="/all-products/skincare/bha">BHA</a>
+    <a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a>
+    <a href="/all-products/skincare/duong-da">Dưỡng da</a>
+    <a href="/all-products/skincare/toner">Toner</a>
+    <a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a>
+    <a href="/all-products/skincare/cham-mun">Chấm mụn</a>
+    <a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a>
+    <a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a>
+  </div>
+
+  <div class="all-category-makeup">
+    <a href="/all-products/makeup/phan-ma">Phấn má</a>
+    <a href="/all-products/makeup/mascara">Mascara</a>
+    <a href="/all-products/makeup/ke-mat">Kẻ mắt</a>  
+    <a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a>
+    <a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a>
+    <a href="/all-products/makeup/son">Son</a>
+  </div>
+
   <div class="sort-button">
     Sắp xếp
     {{{sortable 'price' _sort}}}
@@ -32,12 +55,29 @@
   // update main-title base on params.slug
   var getSlug = `{{type}}`
   var mainTitle = document.querySelector('div.main-title').querySelector('b')
+  var getSkincareCategory = document.querySelector('div.all-category-skincare')
+  var getMakeupCategory = document.querySelector('div.all-category-makeup')
 
   if (getSlug === 'flash-sale') {
-    mainTitle.innerText = 'Toàn bộ sản phẩm đang sale nè'
+    mainTitle.innerText = 'Toàn bộ sản phẩm đang sale'
   }
-  if (getSlug === 'hot') {
-    mainTitle.innerText = 'Toàn bộ sản phẩm đang hot nè'
+  else if (getSlug === 'hot') {
+    mainTitle.innerText = 'Toàn bộ sản phẩm đang hot'
+  }
+  else if (getSlug === 'new-arrival') {
+    mainTitle.innerText = 'Toàn bộ sản phẩm mới về'
+  }
+  else if (getSlug === 'skincare') {
+    mainTitle.innerText = 'Toàn bộ sản phẩm skincare'
+    getSkincareCategory.style.display = 'flex'
+  }
+  else if (getSlug === 'makeup') {
+    mainTitle.innerText = 'Toàn bộ sản phẩm makeup'
+    getMakeupCategory.style.display = 'flex'
+  } 
+  else {
+    getSlug = getSlug.replaceAll('-', ' ')
+    mainTitle.innerText = `Toàn bộ sản phẩm ${getSlug}`
   }
 
   // pagination 
@@ -45,16 +85,20 @@
   var allProducts = document.querySelectorAll('div.product')
   var allProductsLength = allProducts.length
 
-  var index = 5
-  for (let i = index; i < allProductsLength; ++i) {
+  var firstIndex = 0
+  var nextIndex = 10 
+  for (let i = nextIndex; i < allProductsLength; ++i) {
     allProducts[i].style.display = 'none'
   }
 
   seeMoreButton.onclick = function() {
-    index += 5
-    for (let i = 5; i < index; ++i) {
-      allProducts[i].style.display = 'grid'
-    }
+    firstIndex += 10
+    nextIndex += 10
+    if (firstIndex < allProductsLength) {
+      for (let i = firstIndex; i < nextIndex; ++i) {
+        allProducts[i].style.display = 'grid'
+      }
+    } 
   }
 
 </script>
