--- a/src/public/css/userHeader.css
+++ b/src/public/css/userHeader.css
@@ -39,43 +39,46 @@ header {
     }
   }
 
-  #search-input {
-    border-radius: 10px; 
-    height: 50px;
-    width: 100%;
-    border-style: none;
-    resize: vertical;
-  }
-  
-  .search-bar button {
-    font-size: 15px; 
-    padding: 0; 
-    background-color: transparent;
-    border-style: none;
-    align-items: center; 
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
-  input {
-    text-indent: 20px;
+  .search-bar {
+    #search-input {
+      border-radius: 10px; 
+      height: 50px;
+      width: 100%;
+      border-style: none;
+      resize: vertical;
+    }
+
+    button {
+      font-size: 15px; 
+      padding: 0; 
+      background-color: transparent;
+      border-style: none;
+      align-items: center; 
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
+
+    input {
+      text-indent: 20px;
+    }
   }
   
   .header-button {
-    padding: 0 10px 0 10px; 
+    padding: 0 20px 0 20px; 
 
     .orders {
       text-decoration: none;
       position: relative;
       display: inline-block;
+      padding-right: 10px;
       
       .orders-quantity {
         position: absolute;
         top: -5px;
-        right: -5px;
+        right: 5px;
         padding: 5px 10px;
         border-radius: 50%;
         background-color: red;
@@ -101,38 +104,35 @@ header {
       cursor: pointer;
     }
   }
-    
-  .dropdown-avatar {
-    position: relative;
-    display: inline-block;
-    padding-left: 10px;
-  
-    .avatar {
-      display: none; 
-      position: absolute;
-      align-items: center;
-      justify-content: center;
-      max-width: 150px;
-      background-color: white;
-      left: -55px;
-      cursor: pointer;
-      border-radius: 5px;
-      a { text-decoration: none; color: black }
-    };
-  
+
+  .avatar-menu {
+    position: absolute;
+    background-color: white;
+    border-radius: 5px;
+    width: max-content;
+    right: 20px;
+    top: 70px;
+
     a {
-      display: flex;
-      align-items: center;
       padding: 10px;
-      width: 150px;
+      display: flex; 
+      justify-content: space-between;
+      cursor: pointer;
+      align-items: center;
+      text-decoration: none;
+      color: black;
+      margin-block-start: 0;
+      margin-block-end: 0;
     };
-  
-    a:hover { color: red }
+
+    a:hover { 
+      color: red;
+      background-color: #FFDFDF;
+      i { color: red } 
+    }
   }
-  
-  .dropdown-avatar:hover .avatar {
-    display: block;
-  }
+
+
 }
 
 @media screen and (max-width: 700px) {
