--- a/src/public/css/userSignIn.css
+++ b/src/public/css/userSignIn.css
@@ -1,108 +1,130 @@
 .sign-in-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  flex-direction: column;
 
-  form {
-    width: 500px;
-    border: 1px solid black;
-    padding: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: fit-content;
-  }
-
-  .form-title {
-    margin-top: 10px;
+  .sign-in-form{
     display: flex;
     align-items: center;
-    justify-content: center;
-
-    p {
-      font-size: larger;
-      font-weight: bolder;
-      text-transform: uppercase
-    };
-  }
-  
-  .form-group {
-    display: grid;
-    gap: 5px;
-    padding: 5px 10px 5px 10px;
-
-    input {
-      max-width: 500px;
-      height: 30px;
-      border-radius: 5px;
-      border-style: none;
-    };
-
-    #avatar {
-      width: fit-content;
-      padding-left: 5px;
-    }
-  }
-
-  select, option {
-    width: fit-content;
-    height: 30px;
-    border-radius: 5px;
-    border-style: none;
-    padding-left: 5px;
-  }
-
-  p {
-    font-size: 13px;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    font-style: italic;
-    justify-self:end
-  }
-
-  p:hover {
-    text-decoration: underline;
-  }
-
-  .other-login-methods, .other-login-methods-logo {
-    justify-self: center;
-    padding: 5px;
-  }
-
-  .other-login-methods-logo {
-    i {
-      font-size: 30px;
-    }
-  }
-  
-  button {
-    width: 100%;
-    height: 40px;
-    background-color: #D1A6A6;
-    color: white;
-    border: 1px solid #D1A6A6;
-    border-radius: 10px;
-    cursor: pointer;
-    border-color: white;
-    margin: 10px 0
-  };
-
-  button:hover {
-    background-color: white;
-    color:  #D1A6A6;
-    border: 1px solid white ;
-    border-color: #D1A6A6;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid black;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+    width: 80%;
 
-  .sign-up {
-    margin-top: 10px;
-    display: flex;
-    justify-content: start;
-    gap: 10px;
+    img { width: 50% };
+
+    .form-input {
+      width: 50%;
+      padding: 5px;
+      
+      .form-title {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+        font-weight: bolder;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+      }
+  
+      .form-group {
+        padding: 5px 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+
+        input {
+          width: 80%;
+          height: 40px;
+          border-radius: 5px;
+          border: 1px solid #D1A6A6;
+          text-indent: 10px;
+          padding-block: 0px;
+        };
+
+        p {
+          font-size: 13px;
+          margin-block-start: 0;
+          margin-block-end: 0;
+          font-style: italic;
+          justify-self:end
+        }
+      
+        p:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .form-action {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 10px;
+
+        button {
+          width: 80%;
+          height: 40px;
+          background-color: #D1A6A6;
+          color: white;
+          border: 1px solid white;
+          border-radius: 5px;
+          cursor: pointer;
+        };
+      
+        button:hover {
+          background-color: white;
+          color:  #D1A6A6;
+          border: 1px solid white ;
+          border-color: #D1A6A6;
+        }
+      } 
+
+      .other-login-methods, .other-login-methods-logo {
+        justify-self: center;
+        padding: 5px;
+      }
+
+      .other-login-methods-logo {
+        i {
+          font-size: 30px;
+        }
+      }
+      
+      .sign-up {
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+
+        p {
+          font-size: 13px;
+          margin-block-start: 0;
+          margin-block-end: 0;
+          font-style: italic;
+          justify-self:end
+        }
+      
+        p:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sign-in-form {
+    flex-direction: column;
+
+    .form-input {
+      width: 100%;
+      padding: 5px;
+    }
   }
 }
