--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -1,43 +1,45 @@
 <div class="sign-in-container">
-  <form id="form-3" method="post" action="/authentication/checking-account">
-    <div class="form-title">
-      <p>Đăng nhập</p>
-    </div>
+  <div class="sign-in-form">
+    <img src="../../img/4.jpg">
+    <div class="form-input">
+      <p class="form-title">Đăng nhập</p>
+      <form id="form-3" method="post" action="/authentication/checking-account">
+        <div class="form-group">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+          <span class="form-message"></span>
+        </div>
 
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" id="email" name="email">
-      <span class="form-message"></span>
-    </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Mật khẩu">
+          <span class="form-message"></span>
+        </div>
 
-    <div class="form-group">
-      <label for="details">Mật khẩu</label>
-      <input type="password" class="form-control" id="password" name="password">
-      <span class="form-message"></span>
-    </div>
+        <div class="form-group">
+          <p class="forgot-password">
+            Quên mật khẩu ?
+          </p> 
+        </div>
 
-    <div class="form-group">
-      <p class="forgot-password">
-        Quên mật khẩu
-      </p> 
-    </div>
+        <div class="form-action">
+          <button title="submit" type="submit">Đăng nhập</button>
+        </div>
+        
+        <div class="form-group">
+          <div class="other-login-methods">
+            Đăng nhập bằng tài khoản khác
+          </div> 
+          <div class="other-login-methods-logo">
+            <i class="fi fi-brands-facebook"></i>
+            <i class="fi fi-brands-google"></i>
+          </div>
+        </div>
 
-    <button title="submit" type="submit">Đăng nhập</button>
-    
-    <div class="form-group">
-      <div class="other-login-methods">
-        Đăng nhập bằng tài khoản khác
-      </div> 
-      <div class="other-login-methods-logo">
-        <i class="fi fi-brands-facebook"></i>
-        <i class="fi fi-brands-google"></i>
-      </div>
+        <div class="sign-up">
+          <p>Bạn chưa có tài khoản sao</p>
+          <a href="/authentication/sign-up"><p style="color: red; text-decoration:underline">Đăng kí ngay thôi</p></a>
+        </div>
+      </form>
     </div>
-  </form>
-
-  <div class="sign-up">
-    <p>Bạn chưa có tài khoản sao</p>
-    <a href="/authentication/sign-up"><p style="color: red; text-decoration:underline">Đăng kí ngay thôi</p></a>
   </div>
 </div>
 
